Sun May 30 arton
 *lib/rjbextension.rb
	Rjb extension from Andreas Ronge's neo4j
	- directly import jar by require method
	- Rjb::import without quotations (Java class as Ruby object)
 *test/exttest.rb
	test for rjbextension.rb
 *test/rjbtest.jar
	test file for rjbextension.rb
Sat May 29 arton on behalf of atoulme
 *ext/rjb.c	
 *ext/load.c	
 *ext/rjbexception.c
	to accomodate with rubinius
	thanks atoulme !
Wed May 12 arton
 *test/test.rb
	add Class name for TestMixin module because ruby 1.9 doesn't handle the constant.
Tue May 11 arton
 *ext/rjb.c
	fix duplicate method registering while no alias.
	add class methods for inspecting method signatures.
	add class_eval method for extending Java class
 *test/test.rb
	add class methods test for inspecting method signatures.
	add mixin tests
Tue May	4 arton
 *ext/load.c
	corrected wrong function signature (BUG#28088), pointed and fixed by Romulo A. Ceccon (thanks)
 *ext/rjb.c
	using inheritance check while inspecting a object is RJB's instance (for extending it).
Tue Mar 16 arton
 *ext/riconv.c
	change locale setting "" to "C", fixed by Fabien Sartor (rjb-Bugs-27968)
 *ext/rjb.c
	RJB_VERSION -> 1.2.1	
Sun Nov 1 arton
 *ext/load.c
	load jvm pointed by JVM_LIB environment variable first (suggested by Ittay Dror).
 *ext/rjb.c
	RJB_VERSION -> 1.2.0
Sun Oct 11 arton
 *ext/extconf.rb
	add double quotation around include path for mingw compiler, original patched by Roger Pack (thanks)
	remove double quotaion around java_home variable for existing checking by File.directoy?
 *rjb.rake
	adding mingw support for the older version compatibility checking
Thu Sep 10 arton
 *ext/load.c
	Correct previous code (always reload jvm if OSX < Snow Leopard)
	Clear DL's exception if success
 *ext/rjb.c
	RJB_VERSION -> 1.1.9
 *ext/rjbexception.c
	fit arguments for rb_raise to shut warning down
Mon Sep 07 arton
 *ext/load.c
	Check no compat type dylib after loading was failed (for Snow Leopard)
 *ext/rjb.c
	RJB_VERSION -> 1.1.8
Sun Feb 15 arton